--- a/css/style.css
+++ b/css/style.css
@@ -394,6 +394,10 @@ header {
     flex-direction: column;
 }
 
+.phone-section h3 {
+    margin: 0 0 0 1%;
+}
+
 .phone-section .section-content {
     display: flex;
     flex-direction: row;
@@ -480,7 +484,7 @@ header {
     font-size: 2vw;
 }
 
-.phone-screen .model-view {
+.phone-section .model-view {
     position: absolute;
     width: 100%;
     height: 100%;
