--- a/css/style.css
+++ b/css/style.css
@@ -118,6 +118,8 @@ h1 {
 }
 
 .header {
+    left: 50%;
+    transform: translateX(-50%);
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -126,8 +128,10 @@ h1 {
     align-items: center;
     position: fixed;
     top: 0;
-    width: 100%;
+    width: 90%;
+    max-width: 1400px;
     z-index: 10;
+    font-family: 'appleFontBold';
 }
 
 .header .title {
@@ -591,10 +595,31 @@ header {
 
 .tools-bar #power_button {
     z-index: 5;
+    animation: pulse 2s infinite linear;
+    border: 2px solid transparent;
+    border-radius: 100%;
 }
 
-.phone-screen.active #power_button {
+#power_button.active {
     color: var(--yellow);
+    animation: none;
+}
+
+@keyframes pulse {
+	0% {
+/* 		transform: scale(1.2);
+ */		box-shadow: 0 0 0 0 rgba(211, 122, 12, 0.875);
+	}
+
+	70% {
+/* 		transform: scale(1);
+ */		box-shadow: 0 0 0 10px rgba(226, 112, 13, 0);
+	}
+
+	100% {
+/* 		transform: scale(1.2);
+ */		box-shadow: 0 0 0 0 rgba(255, 255, 255, 0);
+	}
 }
 
 .phone-section .content {
