--- a/css/style.css
+++ b/css/style.css
@@ -93,7 +93,7 @@ h3,
 h4,
 h5,
 h6 {
-    font-family: 'Georama', sans-serif;
+    font-family: appleFontBold;
     font-style: normal;
     font-weight: 600;
 }
