--- a/css/style.css
+++ b/css/style.css
@@ -585,13 +585,25 @@ header {
 }
 
 .progress-bar .bar.loaded {
-    width: 55%;
+    width: 0%;
     background-color: var(--graylighter);
 }
 
 .phone-screen.active .bar.loaded {
+    animation-name: loadBar;
+    animation-duration: 3s;
+    width: 55%;
     background: rgb(255, 228, 105);
     background: linear-gradient(90deg, rgba(255, 228, 105, 1) 0%, rgba(236, 200, 99, 1) 34%, rgba(251, 139, 0, 1) 86%);
+}
+
+@keyframes loadBar {
+    from{
+        width: 0%;
+    }
+    to {
+        width: 55%;
+    }
 }
 
 .tools-bar {
