--- a/css/style.css
+++ b/css/style.css
@@ -44,16 +44,16 @@ body {
     font-family: phoneFont;
     font-size: 18px;
     line-height: 1.4;
-    color: var(--white);
+    color: var(--secondary-text);
     font-weight: normal;
     background-color: var(--black);
     -ms-overflow-style: none;
     scrollbar-width: none;
 }
 
-body.lighted {
+/* body.lighted {
     color: var(--orange);
-}
+} */
 
 body::-webkit-scrollbar {
     display: none;
@@ -268,6 +268,7 @@ header {
     opacity: 0;
     font-size: 32px;
     font-weight: 600;
+    color: var(--white);
 }
 
 .step .step-content {
@@ -634,11 +635,11 @@ header {
     animation: pulse 2s infinite linear;
     border: 2px solid transparent;
     border-radius: 100%;
-    color: red;
+    color: var(--green);
 }
 
 #power_button.active {
-    color: var(--green);
+    color: var(--lightblue);
     animation: none;
     /* -webkit-text-fill-color: var(--yellow) */
 }
@@ -717,6 +718,10 @@ header {
 h4 {
     font-size: 40px;
     font-weight: 600;
+    color: var(--lightblue);
+}
+
+h4.lighted{
     color: var(--orange);
 }
 
@@ -1694,9 +1699,6 @@ footer {
         z-index: 7;
     }
 
-    .sun {
-        top: 0;
-    }
 }
 
 @media (min-width: 1025px) and (max-width:1289px) {
