--- a/css/style.css
+++ b/css/style.css
@@ -791,6 +791,15 @@ header {
 .profile span {
     font-weight: 900;
     font-size: 1.4em;
+    background-color: var(--lightblue);
+    color: var(--black);
+    padding: 5px 10px;
+    border-radius: 10px;
+    margin: 10px 0;
+}
+
+.profile i{
+    color: var(--black);
 }
 
 /* .profile .photo{
@@ -1827,4 +1836,38 @@ model-viewer::part(default-progress-bar){
   0% {height:150px; width:150px;}
   50% {height:140px; width:140px;}
   100% {height:150px; width:150px;}
+}
+
+@media (min-width: 1400px) {
+    header{
+      height:  120vh;
+    } 
+
+    .candle-section-head.animated {
+        animation-name: candleUP4;
+    }
+
+    .candle-section-head {
+        animation-name: candleBACK4;
+    }
+
+    @keyframes candleUP4 {
+        0% {
+            transform: translateY(0) scale(1);
+        }
+
+        100% {
+            transform: translateY(30vh) scale(0.7);
+        }
+    }
+
+    @keyframes candleBACK4 {
+        0% {
+            transform: translateY(30vh) scale(0.7);
+        }
+
+        100% {
+            transform: translateY(0) scale(1);
+        }
+    }
 }
